[gd_scene load_steps=30 format=3 uid="uid://dguos55j0p2u2"]

[ext_resource type="Script" path="res://Scripts/enemies2.gd" id="1_1x4om"]
[ext_resource type="Texture2D" uid="uid://bekgw2xluf2u0" path="res://Pixel Adventure 2/Enemies/Plant/Idle (44x42).png" id="1_ig6it"]
[ext_resource type="Texture2D" uid="uid://dset3ck2hh61h" path="res://Pixel Adventure 2/Enemies/Plant/Attack (44x42).png" id="1_vtkwp"]
[ext_resource type="Texture2D" uid="uid://q7srkmnu3qyy" path="res://Pixel Adventure 2/Enemies/Plant/Hit (44x42).png" id="3_fshqp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_djikj"]
atlas = ExtResource("1_vtkwp")
region = Rect2(0, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w83c"]
atlas = ExtResource("1_vtkwp")
region = Rect2(44, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a1c5"]
atlas = ExtResource("1_vtkwp")
region = Rect2(88, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpo5n"]
atlas = ExtResource("1_vtkwp")
region = Rect2(132, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_12x5a"]
atlas = ExtResource("1_vtkwp")
region = Rect2(220, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmw8d"]
atlas = ExtResource("1_vtkwp")
region = Rect2(264, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlnfh"]
atlas = ExtResource("1_vtkwp")
region = Rect2(308, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2whl"]
atlas = ExtResource("3_fshqp")
region = Rect2(0, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2mtw"]
atlas = ExtResource("3_fshqp")
region = Rect2(44, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkrln"]
atlas = ExtResource("3_fshqp")
region = Rect2(88, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5a5q"]
atlas = ExtResource("3_fshqp")
region = Rect2(132, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7rfr"]
atlas = ExtResource("3_fshqp")
region = Rect2(176, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbr26"]
atlas = ExtResource("1_ig6it")
region = Rect2(0, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_lclnp"]
atlas = ExtResource("1_ig6it")
region = Rect2(44, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_lng3g"]
atlas = ExtResource("1_ig6it")
region = Rect2(88, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaev5"]
atlas = ExtResource("1_ig6it")
region = Rect2(132, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hafw"]
atlas = ExtResource("1_ig6it")
region = Rect2(176, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0ypi"]
atlas = ExtResource("1_ig6it")
region = Rect2(220, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssjlo"]
atlas = ExtResource("1_ig6it")
region = Rect2(264, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcc24"]
atlas = ExtResource("1_ig6it")
region = Rect2(308, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_osxfq"]
atlas = ExtResource("1_ig6it")
region = Rect2(352, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo16m"]
atlas = ExtResource("1_ig6it")
region = Rect2(396, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_n53l1"]
atlas = ExtResource("1_ig6it")
region = Rect2(440, 0, 44, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_w7uoj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djikj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w83c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a1c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpo5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12x5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmw8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlnfh")
}],
"loop": true,
"name": &"Attack-Plant",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2whl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2mtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkrln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5a5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7rfr")
}],
"loop": true,
"name": &"Hit-Plant",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbr26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lclnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lng3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaev5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hafw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0ypi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssjlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcc24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osxfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo16m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n53l1")
}],
"loop": true,
"name": &"Idle-Plant",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fx0e2"]
size = Vector2(56, 70)

[node name="enemies_2" type="CharacterBody2D"]
position = Vector2(674, 140)
collision_layer = 4
collision_mask = 256
script = ExtResource("1_1x4om")

[node name="plant" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -43)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_w7uoj")
animation = &"Attack-Plant"
frame_progress = 0.501521

[node name="bullet_spawn_point" type="Marker2D" parent="."]
position = Vector2(-43, -48)

[node name="CollisionShape-plant" type="CollisionShape2D" parent="."]
position = Vector2(3, -36)
shape = SubResource("RectangleShape2D_fx0e2")

[node name="player_detector_left" type="RayCast2D" parent="."]
position = Vector2(0, -33)
target_position = Vector2(-490, 0)
collision_mask = 256

[node name="player_detector_right" type="RayCast2D" parent="."]
position = Vector2(0, -33)
target_position = Vector2(300, 0)
collision_mask = 256
